--- a/MyWallet-Client/src/main/resources/static/css/indexStyle.css
+++ b/MyWallet-Client/src/main/resources/static/css/indexStyle.css
@@ -178,24 +178,40 @@ color: White;
 
 .myWallet { 
 	grid-area: a1;
-	margin-left: 330px;
+	text-align: center;
+	/*border: 1px solid RED;*/
 	}	
+	
 .clockAndDate { 
+	width: 200px;
 	grid-area: a2; 
 	text-align: right;
-  	padding: 50px 50px;
+  	padding: 50px 0px;
   	font-size: 19px;
     font-weight: bold;
      font-family: Arial, sans-serif;
-	}		
+     /*border: 1px solid #dfdfdf;*/
+	}	
+	
+.loggedInUser { 
+	width: 200px;
+	grid-area: a3; 
+	text-align: left;
+  	padding: 50px 10px;
+  	font-size: 13px;
+    font-weight: bold;
+     font-family: Arial, sans-serif;
+      /* border: 1px solid #dfdfdf;*/
+	}	
+		
 .square { grid-area: a4; }
 
 .griditem1 {
   display: grid;
   grid-auto-flow: right;
   grid-template-areas: 	
-	  "a1 a1 a1 a1 a1 a1 a1 a1 a2"
-	  "a1 a1 a1 a1 a1 a1 a1 a1 a2"
+	  "a3 a1 a1 a1 a1 a1 a1 a1 a2"
+	  "a3 a1 a1 a1 a1 a1 a1 a1 a2"
 	  "a4 a4 a4 a4 a4 a4 a4 a4 a4";
 }
 
