--- a/MyWallet-Client/src/main/resources/templates/expenditureUpdatePage.html
+++ b/MyWallet-Client/src/main/resources/templates/expenditureUpdatePage.html
@@ -6,31 +6,41 @@
     <link rel="stylesheet" href="css/updatePageStyle.css" />
     
     
-    <script src="/js/setTimeAndDate.js"></script>
+	<script src="/js/setTimeAndDate.js"></script>
+	<script src="/js/startFunctionsUserPage.js"></script>
     
 </head>
-<body onload="setTimeAndDate();">
+<body onload="startFunctionsUserPage();">
 	<div class="container">
 		<div class = "griditem1">
-			<h1 style="color: #4485b8;">
-				<span style="background-color: #000000; color: #ffffff; padding: 0 200px;">My Wallet</span>
-			</h1>
-			<h4>Update expenditure</h4>
-			<div class="square"></div>	
+			<div class = "myWallet">
+				<h1 style="color: #4485b8;">
+					<span style="background-color: #000000; color: #ffffff; padding: 0 200px;">My Wallet</span>
+				</h1>
+				<h4>User panel</h4>
+			</div>
+			
+			<div id="clockAndDate" class = "clockAndDate" ></div>
+			  
+			<div class = "loggedInUser" >
+   				Witaj <label th:text="${loggedInUser.name}" ></label>
+	   			<label th:text="${loggedInUser.surname}" ></label>!<br>
+	   			(id: <label th:text="${loggedInUser.id}" ></label>
+	   			username: <label th:text="${loggedInUser.username}" ></label>)
+
+   			</div>
+			<div class="square"></div>
 		</div>
-
 		<div class = "griditem2">		
-		
-				<br>
-   				<div id="clock" style="text-align: center"></div>
-   				
-   				<div id="date" style="text-align: center"></div><br>
 			  	
-				<a href="/userPage">USERS</a><br>
-				<a href="/">EXPENDITURE</a><br><br>
-				<a href="empty">ABOUT</a><br><br>
+			  	<form action="/userPage">
+    				<input type="submit" value="User page" />
+				</form>	
+				<form action="/showExpenditures">
+    				<input type="submit" value="Expenditure page" />
+				</form>	
 
-				<button onclick="history.back()">BACK</button>	
+				<button onclick="history.back()">🡸</button>	
 		</div>
 
 		
