--- a/MyWallet-Client/src/main/resources/templates/updateUser.html
+++ b/MyWallet-Client/src/main/resources/templates/updateUser.html
@@ -7,8 +7,26 @@
     
     
 	<script src="/js/setTimeAndDate.js"></script>
+	<script src="/js/validateUpdateUserForm.js"></script>
 	<script src="/js/startFunctionsUserPage.js"></script>
+    <script th:inline="javascript">
     
+    function getUsers()
+    {
+	    /*<![CDATA[*/
+	   	return  /*[[${userList}]]*/ 'default';
+		/*]]>*/
+    }
+    
+    function getUserToUpdate()
+    {
+	    /*<![CDATA[*/
+	   	return  /*[[${userToUpdate}]]*/ 'default';
+		/*]]>*/
+    }
+ 
+	</script>
+	
 </head>
 <body onload="startFunctionsUserPage();">
 	<div class="container">
@@ -48,25 +66,26 @@
 		<div class = "griditem3">				
 				   <h2 style="color:black;">User update</h2><br>
    				
-					<form class = "updateFormUser" th:action="@{updateUser}" th:object = "${userToUpdate}" method ="POST">
+					<form class = "updateFormUser" th:action="@{updateUser}" th:object = "${userToUpdate}" 
+					onsubmit="return validateUpdateUserForm()" method ="POST">
 							
 						<font  color = black>Identification number</font><br>
-						<input type ="number" id ="id" name = "id" readonly="readonly" th:value = "${userToUpdate.id}" /> <br><br>
+						<input type ="number" id ="id" name = "id" readonly="readonly" th:value = "${userToUpdate.id}" required/> <br><br>
 					
 						<font  color = black>Name</font><br>
-						<input type = "text" id ="name" name = "name" th:value = "${userToUpdate.name}" /><br><br>
+						<input type = "text" id ="name" name = "name" th:value = "${userToUpdate.name}" required/><br><br>
 						
 						<font color = black>Surname</font><br>
-						<input type = "text" id ="surname" name = "surname" th:value = "${userToUpdate.surname}" /><br><br>
+						<input type = "text" id ="surname" name = "surname" th:value = "${userToUpdate.surname}" required/><br><br>
 						
 						<font  color = black>Username</font><br>
-						<input type = "text" id ="username" name = "username" th:value = "${userToUpdate.username}" /><br><br>
+						<input type = "text" id ="username" name = "username" th:value = "${userToUpdate.username}" required/><br><br>
 						
 						<font color = black>Password</font><br>
-						<input type = "text" id ="password" name = "password" th:value = "${userToUpdate.password}" /><br><br>
+						<input type = "text" id ="password" name = "password" th:value = "${userToUpdate.password}" required/><br><br>
 						
 						<font color = black>Email</font><br>
-						<input type = "text" id ="email" name = "email" th:value = "${userToUpdate.email}" /><br><br>
+						<input type = "text" id ="email" name = "email" th:value = "${userToUpdate.email}" required/><br><br>
 						
 						<font>Roles</font><br>
 						<input type = "checkbox" name = "isAdmin" th:value = 1 />
